--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -82,3 +82,30 @@
 .gs-go-top:hover{
     background-color: #006799;
 }
+
+.gs-dashboard-resumen{
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.gs-card{
+    flex: 1;
+    padding: 15px;
+    background: #fff;
+    border: 1px solid #ccd0d4;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+}
+
+.gs-card h3{
+    margin-bottom: 10px;
+    font-size: 16px;
+}
+
+.gs-big-number{
+    font-size: 28px;
+    font-weight: bold;
+    color: #0073aa;
+}
